fix: env, html, testing live now

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <title>Mi App React</title>
+    <title>HSBI onboarding v1.0</title>
   </head>
   <body>
     <div id="root"></div>
